<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_header"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/menu_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/menu_full_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/menu_address_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/menu_address"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/menu_address_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/menu_address2"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/menu_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/menu_city"
            android:inputType="textPersonName" />

        <Spinner
            android:id="@+id/menu_state"
            android:entries="@array/states"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/menu_zip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/menu_zip"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeActionLabel="@string/action_login_short"
            android:imeOptions="actionDone"
            android:text="@string/menu_done" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>